--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     </nav>
 
     <!-- Ana Başlık (Hero) Bölümü -->
-    <header class="hero min-h-screen flex flex-col items-center justify-center p-6 text-center">
+    <header class="hero min-h-screen flex flex-col items-center justify-center p-6 text-center pt-24">
         <div class="hero-content animate-fadeInUp">
             <h1 class="text-5xl sm:text-6xl md:text-7xl font-bold mb-6 text-white leading-tight">
                 Nurettin Sakoğlu
@@ -288,7 +288,7 @@
                                 <span class="font-semibold">Ara</span>
                             </a>
                             
-                            <a href="https://www.remax.com.tr/danisman/26150/nurettin-sakoglu?t=yorumlar" target="_blank" class="bg-yellow-500 hover:bg-yellow-600 text-white p-4 rounded-xl text-center transition-all duration-300 transform hover:scale-105 social-link">
+                            <a href="https://g.co/kgs/24k5m94" target="_blank" class="bg-yellow-500 hover:bg-yellow-600 text-white p-4 rounded-xl text-center transition-all duration-300 transform hover:scale-105 social-link">
                                 <i class="fas fa-star text-2xl mb-2 block"></i>
                                 <span class="font-semibold">Yorumlar</span>
                             </a>
@@ -371,14 +371,15 @@
             }
 
             // Smooth scroll for navigation links
+            // Smooth scroll for navigation links
             document.querySelectorAll('a[href^="#"]').forEach(anchor => {
                 anchor.addEventListener('click', function (e) {
                     e.preventDefault();
                     const target = document.querySelector(this.getAttribute('href'));
                     if (target) {
-                        const headerOffset = 80;
+                        const navbarHeight = document.querySelector('nav').offsetHeight;
                         const elementPosition = target.getBoundingClientRect().top;
-                        const offsetPosition = elementPosition + window.pageYOffset - headerOffset;
+                        const offsetPosition = elementPosition + window.pageYOffset - navbarHeight;
 
                         window.scrollTo({
                             top: offsetPosition,
@@ -387,6 +388,7 @@
                     }
                 });
             });
+
 
             // Navbar scroll effect
             const navbar = document.querySelector('nav');
