--- a/index.html
+++ b/index.html
@@ -111,27 +111,43 @@
 </head>
 <body class="text-gray-900 antialiased">
 
-    <!-- Navigasyon Çubuğu -->
+    <!-- Navbar -->
     <nav class="nav-blur text-white p-4 fixed top-0 left-0 w-full z-50 shadow-xl border-b border-white/10">
         <div class="container mx-auto flex justify-between items-center">
             <a href="#" class="text-xl font-bold hover:text-gray-300 transition-colors duration-300">
                 <span class="gradient-text text-white">Nurettin Sakoğlu</span>
             </a>
-            <div class="flex space-x-8 items-center">
+
+            <!-- Masaüstü Menü -->
+            <div class="hidden md:flex space-x-8 items-center">
                 <a href="#hakkimizda" class="hover:text-blue-300 transition-colors duration-300 font-medium">Hakkımda</a>
-                
-                <div class="relative dropdown">
-                    <a href="#ilanlar" class="hover:text-blue-300 transition-colors duration-300 font-medium flex items-center">
-                        İlanlar 
-                    </a>
-                </div>
-                
+                <a href="#ilanlar" class="hover:text-blue-300 transition-colors duration-300 font-medium">İlanlar</a>
                 <a href="https://www.remax.com.tr/danisman/26150/nurettin-sakoglu?t=yorumlar" target="_blank" class="hover:text-blue-300 transition-colors duration-300 font-medium">Müşteri Yorumları</a>
                 <a href="#iletisim" class="hover:text-blue-300 transition-colors duration-300 font-medium">İletişim</a>
             </div>
+
+            <!-- Mobil Hamburger Buton -->
+            <button id="mobile-menu-btn" class="md:hidden focus:outline-none">
+                <i class="fas fa-bars text-2xl"></i>
+            </button>
         </div>
     </nav>
 
+    <!-- Yan Menü (Mobil Sidebar) -->
+    <div id="mobile-sidebar" class="fixed top-0 right-0 w-64 h-full bg-gray-900 text-white shadow-2xl transform translate-x-full transition-transform duration-300 z-50">
+        <div class="flex justify-between items-center p-4 border-b border-white/20">
+            <h3 class="text-lg font-bold">Menü</h3>
+            <button id="close-sidebar" class="focus:outline-none">
+                <i class="fas fa-times text-xl"></i>
+            </button>
+        </div>
+        <div class="flex flex-col p-6 space-y-4">
+            <a href="#hakkimizda" class="hover:text-blue-300 transition-colors font-medium">Hakkımda</a>
+            <a href="#ilanlar" class="hover:text-blue-300 transition-colors font-medium">İlanlar</a>
+            <a href="https://www.remax.com.tr/danisman/26150/nurettin-sakoglu?t=yorumlar" target="_blank" class="hover:text-blue-300 transition-colors font-medium">Müşteri Yorumları</a>
+            <a href="#iletisim" class="hover:text-blue-300 transition-colors font-medium">İletişim</a>
+        </div>
+    </div>
     <!-- Ana Başlık (Hero) Bölümü -->
     <header class="hero min-h-screen flex flex-col items-center justify-center p-6 text-center pt-24">
         <div class="hero-content animate-fadeInUp">
@@ -370,8 +386,6 @@
                 });
             }
 
-            // Smooth scroll for navigation links
-            // Smooth scroll for navigation links
             document.querySelectorAll('a[href^="#"]').forEach(anchor => {
                 anchor.addEventListener('click', function (e) {
                     e.preventDefault();
@@ -386,9 +400,13 @@
                             behavior: 'smooth'
                         });
                     }
+
+                    // Sidebar açıksa kapat
+                    if (window.innerWidth < 768) {
+                        sidebar.classList.add('translate-x-full');
+                    }
                 });
             });
-
 
             // Navbar scroll effect
             const navbar = document.querySelector('nav');
@@ -418,6 +436,26 @@
             document.querySelectorAll('.card-hover').forEach(card => {
                 observer.observe(card);
             });
+
+
+            // Mobil Sidebar aç/kapat
+            const menuBtn = document.getElementById('mobile-menu-btn');
+            const sidebar = document.getElementById('mobile-sidebar');
+            const closeBtn = document.getElementById('close-sidebar');
+
+            if (menuBtn && sidebar) {
+                menuBtn.addEventListener('click', () => {
+                    sidebar.classList.remove('translate-x-full');
+                    sidebar.classList.add('translate-x-0');
+                });
+            }
+
+            if (closeBtn) {
+                closeBtn.addEventListener('click', () => {
+                    sidebar.classList.remove('translate-x-0');
+                    sidebar.classList.add('translate-x-full');
+                });
+            }
         });
     </script>
 </body>
