--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                                 <span class="font-semibold">Ara</span>
                             </a>
                             
-                            <a href="https://g.co/kgs/24k5m94" target="_blank" class="bg-yellow-500 hover:bg-yellow-600 text-white p-4 rounded-xl text-center transition-all duration-300 transform hover:scale-105 social-link">
+                            <a href="https://www.remax.com.tr/danisman/26150/nurettin-sakoglu?t=yorumlar" target="_blank" class="bg-yellow-500 hover:bg-yellow-600 text-white p-4 rounded-xl text-center transition-all duration-300 transform hover:scale-105 social-link">
                                 <i class="fas fa-star text-2xl mb-2 block"></i>
                                 <span class="font-semibold">Yorumlar</span>
                             </a>
@@ -460,3 +460,4 @@
     </script>
 </body>
 </html>
+
