--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="google-site-verification" content="Xb5v3Ikdr3KZGLR5db8w-ItNYHaIk6Il97oUMt9-IoQ" />
+    
     <title>Profesyonel Emlak Danışmanı - Nurettin Sakoğlu</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -460,4 +463,5 @@
     </script>
 </body>
 </html>
+
 
