--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 
     <meta name="google-site-verification" content="Xb5v3Ikdr3KZGLR5db8w-ItNYHaIk6Il97oUMt9-IoQ" />
     
-    <title>Profesyonel Emlak Danışmanı - Nurettin Sakoğlu</title>
+    <title>Nurettin Sakoğlu | Remax Profesyonel Emlak Danışmanı</title>
+    <meta name="description" content="Nurettin Sakoğlu - Remax gayrimenkul danışmanı. Emlak alım satım, kiralama ve yatırım danışmanlığı hizmetleri. Güvenilir ve profesyonel hizmet için hemen iletişime geçin.">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -463,5 +465,6 @@
     </script>
 </body>
 </html>
+
 
 
